backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-example
  namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: localhostsec.com
      http:
        paths:
          - path: /
            pathType: Prefix  
            backend:
              service:
                name: backend-deployment
                port:
                  number: 80
